--- a/HomeCFOContext/HomeCFOContext.csproj
+++ b/HomeCFOContext/HomeCFOContext.csproj
@@ -51,7 +51,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context.cs" />
+    <Compile Include="Initializers\SeedInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeedData\MintSeed.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -65,8 +67,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Configuration\" />
-    <Folder Include="Initializers\" />
-    <Folder Include="SeedData\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
