--- a/HomeCFOContext/HomeCFOContext.csproj
+++ b/HomeCFOContext/HomeCFOContext.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Context.cs" />
     <Compile Include="Initializers\SeedInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeedData\GlobalSeed.cs" />
     <Compile Include="SeedData\MintSeed.cs" />
   </ItemGroup>
   <ItemGroup>
